# blackchocobo

./: .appveyor.yml  .gitattributes  .gitignore  .gitingore  .travis.yml  Black_Chocobo.desktop  Black_Chocobo.pro  CMakeLists.txt  FF7SAVE.h  FF7StaticData.cpp  FF7StaticData.h  Makefile.Debug  Makefile.Release  README.md  REUSE.toml  about.cpp  about.h  about.ui  achievementdialog.cpp  achievementdialog.h  bcdialog.cpp  bcdialog.h  bchoco.rc  bcsettings.cpp  bcsettings.h  blackchocobo.appdata.xml  errbox.cpp  errbox.h  errbox.ui  filedialog.cpp  filedialog.h  globals.cpp  globals.h  images.qrc  loadsave.cpp  loadsave.h  locations.qrc  main.cpp  mainwindow.cpp  mainwindow.h  (+12 more)
.github/: FUNDING.yml
.reuse/: dep5
debian/: menu  (+10 more)
deploy/: Black_Chocobo.appdata.xml  Black_Chocobo.desktop  CMakeLists.txt  FileAssociation.nsh  bchoco.nsi  bchoco_icon_osx.icns  blackchocobo.appdata.xml  blackchocobo.icns  blackchocobo.rc.in  blackchocobo.xml  cpackOptions.cmake.in  dmg_ds_store  dmg_icon.icns  generate_ds_store.applescript  io.github.sithlord48.blackchocobo.desktop  io.github.sithlord48.blackchocobo.metadata.xml  io.github.sithlord48.blackchocobo.metainfo.xml  io.github.sithlord48.blackchocobo.xml  org.sithlord48.blackchocobo.desktop  preBuildCPack.cmake.in
lang/: CMakeLists.txt  bchoco_de.ts  bchoco_en.ts  bchoco_es.ts  bchoco_es_test.ts  bchoco_fr.ts  bchoco_it.ts  bchoco_ja.ts  bchoco_pl.ts  bchoco_re.ts
qhexedit/: CMakeLists.txt  README.md  chunks.cpp  chunks.h  commands.cpp  commands.h  qhexedit.cpp  qhexedit.h  qhexedit_p.cpp
src/: CMakeLists.txt  about.cpp  about.ui  achievementdialog.cpp  achievementdialog.h  bcdialog.cpp  bcdialog.h  bcsettings.cpp  bcsettings.h  blackchocobo.cpp  blackchocobo.h  blackchocobo.ui  errbox.cpp  errbox.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  options.cpp  options.h  options.ui
src/dialogs/: CMakeLists.txt  about.cpp  about.h  about.ui  bcdialog.cpp  bcdialog.h  errbox.cpp  errbox.h  options.cpp  options.h  options.ui
src/widgets/: CMakeLists.txt  itemtab.cpp  itemtab.h  partytab.cpp  partytab.h
translations/: CMakeLists.txt  blackchocobo_de.ts  blackchocobo_en.ts  blackchocobo_es.ts  blackchocobo_fr.ts  blackchocobo_it.ts  blackchocobo_ja.ts  blackchocobo_pl.ts  blackchocobo_re.ts  blackchocobo_zh.ts  blackchocobo_zh_CN.ts  blackchocobo_zh_TW.ts
trunk/: Black_Chocobo.desktop  Black_Chocobo.pro  CMakeLists.txt  COPYING.txt  FF7SAVE.h  FF7Text.cpp  Makefile  Makefile.Debug  SaveIcon.cpp  about.cpp  about.h  about.ui  achievementdialog.cpp  achievementdialog.h  bchoco.rc  errbox.cpp  errbox.h  errbox.ui  globals.cpp  globals.h  images.qrc  loadsave.cpp  locations.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadatacreator.cpp  metadatacreator.h  metadatacreator.ui  options.cpp  options.h  options.ui  save0  slotselect.cpp  slotselect.h  slotselect.ui  svnversion.hmake  version.h
trunk/FF7tk/data/: FF7Char.cpp  FF7Char.h  FF7FieldItemList.cpp  FF7FieldItemList.h  FF7Item.cpp  FF7Location.cpp  FF7Location.h  FF7Materia.cpp  FF7Save.cpp  FF7Save.h  FF7Text.h  SaveIcon.h  Type_FF7CHAR.h  Type_materia.h
trunk/FF7tk/icons/: achievements.qrc  locations.qrc  materia.qrc
trunk/FF7tk/static_data/: FF7Achievements.h  FF7Char.cpp  FF7Char.h  FF7FieldItemList.cpp  FF7FieldItemList.h  FF7Item.cpp  FF7Item.h  FF7Location.cpp  FF7Location.h  FF7Materia.h  FF7Save.cpp  FF7Save.h  FF7Save_Const.h  FF7Save_Types.h
trunk/FF7tk/static_data/icons/Achievement_Icons/: achievements.qrc
trunk/FF7tk/static_data/icons/Char_Icons/: vincent.xpm
trunk/FF7tk/static_data/icons/Chocobo_Icons/: chocobo.qrc  gold_choco.xpm  yellow_choco.xpm
trunk/FF7tk/static_data/icons/Common_Icons/: paste.xpm  quit.xpm
trunk/FF7tk/static_data/icons/Item_Icons/: accessory.xpm
trunk/FF7tk/static_data/icons/Location_Icons/: locations.qrc
trunk/FF7tk/widgets/: AchievementEditor.cpp  AchievementEditor.h  CharEditor.cpp  CharEditor.h  ChocoboEditor.cpp  ChocoboEditor.h  ChocoboLabel.cpp  ChocoboLabel.h  ChocoboManager.h  DialogPreview.cpp  DialogPreview.h  DoubleCheckBox.cpp  ItemList.cpp  ItemList.h  ItemPreview.cpp  ItemPreview.h  ItemSelector.cpp  ItemSelector.h  LocationViewer.cpp  LocationViewer.h  MateriaEditor.cpp  MateriaEditor.h  MenuListWidget.cpp  MenuListWidget.h  MetadataCreator.cpp  MetadataCreator.h  OptionsWidget.cpp  OptionsWidget.h  PhsListWidget.h  SlotPreview.cpp  SlotPreview.h  SlotSelect.cpp  SlotSelect.h
trunk/debian/: changelog  control  copyright  install  preinst
trunk/debian/source/: include-binaries
trunk/ff7tk/data/: FF7Achievements.h  FF7Char.cpp  FF7Char.h  FF7FieldItemList.h  FF7Location.h  FF7Materia.h  FF7Save_Const.h  SaveIcon.h  Type_materia.h
trunk/ff7tk/icons/: psxButtons.qrc
trunk/ff7tk/widgets/: CharEditor.cpp  CharEditor.h  ChocoboManager.cpp  DialogPreview.cpp  ItemList.cpp  ItemPreview.cpp  MenuListWidget.cpp  SlotPreview.h  SlotSelect.cpp
trunk/lang/: bchoco_de.ts  bchoco_en.ts  bchoco_es.ts  bchoco_fr.ts  bchoco_ja.ts  bchoco_re.ts
trunk/qhexedit/: qhexedit_p.cpp  qhexedit_p.h  xbytearray.cpp
trunk/static_data/: FF7Char.cpp  FF7Char.h  FF7Item.cpp  FF7Item.h  FF7Location.h  FF7Materia.cpp  FF7Materia.h  FF7Save.cpp  FF7Save.h  FF7Save_Types.h  FF7Text.cpp  Type_FF7CHAR.h
trunk/static_data/icons/Char_Icons/: aeris.xpm  barret.xpm  cait.xpm  cid.xpm  cloud.xpm  vincent.xpm
trunk/static_data/icons/Chocobo_Icons/: black_choco.xpm  green_choco.xpm
trunk/static_data/icons/Common_Icons/: copy.xpm
trunk/static_data/icons/Item_Icons/: clip.xpm  glove.xpm  gunarm.xpm  item.xpm  m_no_grow_slot.xpm  mlink.xpm  mphone.xpm  spear.xpm  star.xpm  sword.xpm
trunk/static_data/icons/Materia_Icons/: command_star_empty.xpm  independent.xpm  indpendent.xpm  indpendent_star_empty.xpm  indpendent_star_full.xpm  magic.xpm  magic_star_empty.xpm  magic_star_full.xpm  summon.xpm  summon_star_empty.xpm  support.xpm  support_star_empty.xpm
trunk/widgets/: CharEditor.cpp  CharEditor.h  DialogPreview.cpp  ItemPreview.cpp  ItemPreview.h  MateriaEditor.cpp  MateriaEditor.h  SlotPreview.cpp  SlotSelect.cpp
(+257 files in other folders)
