if(UNIX AND NOT APPLE)
    install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/blackchocobo.png DESTINATION share/pixmaps/)
    install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/org.sithlord48.blackchocobo.desktop DESTINATION share/applications/)
    install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/blackchocobo.xml DESTINATION share/mime/packages/)
    install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/blackchocobo.appdata.xml DESTINATION share/metainfo/)
elseif(WIN32)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/blackchocobo.rc.in ${CMAKE_CURRENT_BINARY_DIR}/blackchocobo.rc @ONLY)
endif()
